=head1 ACKNOWLEDGEMENTS

Extra Thanks to:

Andreas Koenig <andreas.koenig@franz.ww.tu-berlin.de>
for *lots* of bug spotting, fixing and patching, 
Apache::Registry and CGI.pm overhaul efforts (aka CGI::XA &
CGI::Switch) 

Gisle Aas <aas@sn.no>
For getting this effort started and many contributions since 

Other contributors are mentioned below.

=head1 CHANGES

=over 3

=item 1.11_01-dev

$r->read_client_block is deprecated

re-implemented $r->read to properly use *client_block methods and call
reset_timeout after each read in the loop

added setup_client_block, should_client_block and get_client_block
methods

modules/cgi test will attempt a fileupload of perlfunc.pod to
file_upload.cgi if HTTP::Request::Common is installed
(libwww-perl-5.09+) and $CGI::VERSION >= 2.39

make $r->connection->aborted work as documented again, thanks to spot
by Jens Heunemann

swap order of stacked handlers so dynamic ones (push_handlers) are
invoked after server .conf configured handlers

replace uses of SvPVX() with SvPV() to prevent possible core dump if
called with a non-string value

added COMPILED REGULAR EXPRESSIONS section to mod_perl_traps.pod
[David Landgren <david@landgren.net>, 
Mark Mills <mark@ntr.net>, 
Randal Schwartz <merlyn@stonehenge.com>, 
Jens Heunemann <heunemann2@janet.de>]

have ldopts yank ExtUtils::Liblist message:
 Note (probably harmless): No library found for ...
from stdout to stderr [Stas Bekman <sbekman@iil.intel.com>]

change Apache.xs/typemap so classes who inherit from the Apache class
can invoke methods with a hash object, provided $hash->{_r} contains a
request_rec object

additions to experimental Perl directive support:
-  a per-directory config object is now passed as the first argument
   to directive handlers registered via Apache::ExtUtils->xs_cmd_table
   the object is a hash reference blessed into the same class as the handler
- $r->dir_config with no args now looks for per-directory config in
  the caller's namespace