@@ -45,6 +45,7 @@ Symbol/Makefile.PL
 Symbol/Symbol.pm
 Symbol/Symbol.xs
 Symbol/test.pl
+src/modules/perl/mod_perl_version.h
 src/modules/perl/Constants.xs
 src/modules/perl/Apache.xs
 src/modules/perl/ldopts
@@ -143,4 +144,5 @@ faq/Makefile
 faq/mod_perl_api.pod
 faq/mod_perl_cgi.pod
 faq/mod_perl_faq.pod
+faq/mjtg-news.txt
 htdocs/manual/mod/mod_perl.html
