@@ -227,16 +227,16 @@ GKNOPS	 Gerd Knops &lt;gerti@BITart.com&gt;
 GRICHTER Gerald Richter &lt;richter@ecos.de&gt;
 HMUELLER Hanno Mueller &lt;hmueller@mail.kabel.de&gt;
 IKLUFT	 Ian Kluft &lt;ikluft@cisco.com&gt;
-JANPAZ	 Honza Pazdziora &lt;adelton@INFORMATICS.MUNI.CZ&gt;
+JANPAZ	 Honza Pazdziora &lt;adelton@informatics.muni.cz&gt;
 JBAKER   Jeffrey Baker &lt;jeff@tamu.edu&gt;
-JGROV	 John D Groenveld &lt;groenvel@cse.psu.edu&gt;
+JGROV	 John D Groenveld &lt;jdg117@elvis.arl.psu.edu&gt;
 JROWE	 Jeff Rowe &lt;beowulf@lava.net&gt;
 KWILLIAM Ken Williams  &lt;ken@forum.swarthmore.edu&gt;
 LDS	 Lincoln D. Stein &lt;lstein@genome.wi.mit.edu&gt;
 MARKC	 Mark Constable &lt;markc@goldcoast.org&gt;
 MARKIM	 Mark A. Imbriaco &lt;mark@itribe.net&gt;
 MARKK	 Mark Kennedy &lt;mtk@ny.ubs.com&gt;
-MAURICE	 Maurice Aubrey &lt;maurice@HEVANET.COM&gt
+MAURICE	 Maurice Aubrey &lt;maurice@hevanet.com&gt
 MDORMAN	 Michael Alan Dorman  &lt;mdorman@calder.med.miami.edu&gt;
 MERGL	 Edmund Mergl &lt;E.Mergl@bawue.de&gt;
 MJS      Michael Smith &lt;mjs@iii.co.uk&gt;
