@@ -38,6 +38,10 @@ if(defined &main::subversion) {
     die "mod_perl.pm is broken\n";
 }
 
+if($ENV{PERL_TEST_NEW_READ}) {
+    *Apache::READ = \&Apache::new_read;
+}
+
 $ENV{KeyForPerlSetEnv} eq "OK" or warn "PerlSetEnv is broken\n";
 
 #test Apache::RegistryLoader
